// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`desktop when showGetInTouch is false renders the expected classes 1`] = `
<div>
  <div>
    <div
      class="textField TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
      data-garden-id="textfields.text_group"
      data-garden-version="3.7.0"
    >
      <label
        class="label Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
        data-garden-id="textfields.label"
        data-garden-version="3.7.0"
        for="garden-text-field-0--input"
        id="garden-text-field-0--label"
      >
        Type your question here...
      </label>
      <textarea
        aria-invalid="false"
        aria-labelledby="garden-text-field-0--label"
        class="input Textarea-sc-1alsvvb-0 text__c-txt__input--area___3VBq- dcOmlb Input-sc-4gf5js-0-textarea text__c-txt__input___2ZeOl kpjxwv"
        data-garden-id="textfields.textarea"
        data-garden-version="3.7.0"
        id="garden-text-field-0--input"
        name="answerBotInputValue"
        placeholder="Type your question here..."
        rows="3"
      >
        desktop message
      </textarea>
    </div>
  </div>
</div>
`;

exports[`desktop when showGetInTouch is true renders the expected classes 1`] = `
<div>
  <div>
    <div
      class="slideAppear"
      role="presentation"
      style="opacity: 0; bottom: -10px;"
    >
      <div
        class="quickReplyContainer"
      >
        <button
          class="
      button
      getInTouch
    "
        >
          Get in touch
        </button>
      </div>
    </div>
    <div
      class="textField TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
      data-garden-id="textfields.text_group"
      data-garden-version="3.7.0"
    >
      <label
        class="label Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
        data-garden-id="textfields.label"
        data-garden-version="3.7.0"
        for="garden-text-field-4--input"
        id="garden-text-field-4--label"
      >
        Type your question here...
      </label>
      <textarea
        aria-invalid="false"
        aria-labelledby="garden-text-field-4--label"
        class="input Textarea-sc-1alsvvb-0 text__c-txt__input--area___3VBq- dcOmlb Input-sc-4gf5js-0-textarea text__c-txt__input___2ZeOl kpjxwv"
        data-garden-id="textfields.textarea"
        data-garden-version="3.7.0"
        id="garden-text-field-4--input"
        name="answerBotInputValue"
        placeholder="Type your question here..."
        rows="3"
      >
        desktop message
      </textarea>
    </div>
  </div>
</div>
`;

exports[`mobile when showGetInTouch is false renders the expected classes 1`] = `
<div>
  <div>
    <div
      class="containerMobile"
    >
      <div
        class="inputContainerMobile"
      >
        <div
          class="textField TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
          data-garden-id="textfields.text_group"
          data-garden-version="3.7.0"
        >
          <label
            class="label Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
            data-garden-id="textfields.label"
            data-garden-version="3.7.0"
            for="garden-text-field-6--input"
            id="garden-text-field-6--label"
          >
            Type your question here...
          </label>
          <textarea
            aria-invalid="false"
            aria-labelledby="garden-text-field-6--label"
            class="input inputMobile fieldMobile Textarea-sc-1alsvvb-0 text__c-txt__input--area___3VBq- dcOmlb Input-sc-4gf5js-0-textarea text__c-txt__input___2ZeOl kpjxwv"
            data-garden-id="textfields.textarea"
            data-garden-version="3.7.0"
            id="garden-text-field-6--input"
            name="answerBotInputValue"
            placeholder="Type your question here..."
            rows="1"
          >
            mobile message
          </textarea>
        </div>
      </div>
      <button
        aria-label="Send"
        class="button iconSendAnswerBotMobile IconButton-x15t1e-0 index__c-btn--icon___3Mbhs laoDmX Button__StyledButton-sc-12lsl5w-0 index__c-btn___1jmsn index__c-btn--basic___3PMxO index__c-btn--muted___3GOeG index__c-btn--pill___3Lsyd index__c-btn--lg___16u8A lcPfmb"
        data-garden-id="buttons.icon_button"
        data-garden-version="3.7.0"
        tabindex="0"
        type="button"
      >
        <span
          class="container Icon--sendChat"
          data-testid="Icon--sendChat"
          type="Icon--sendChat"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_sendChat.svg"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`mobile when showGetInTouch is true renders the expected classes 1`] = `
<div>
  <div>
    <div
      class="slideAppear slideAppearMobile"
      role="presentation"
      style="opacity: 0; bottom: -10px;"
    >
      <div
        class="quickReplyContainer"
      >
        <button
          class="
      button
      getInTouch
    "
        >
          Get in touch
        </button>
      </div>
    </div>
    <div
      class="containerMobile"
    >
      <div
        class="inputContainerMobile"
      >
        <div
          class="textField TextGroup-sc-127gh0a-0 text__c-txt___14ptu fjQWCj"
          data-garden-id="textfields.text_group"
          data-garden-version="3.7.0"
        >
          <label
            class="label Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
            data-garden-id="textfields.label"
            data-garden-version="3.7.0"
            for="garden-text-field-10--input"
            id="garden-text-field-10--label"
          >
            Type your question here...
          </label>
          <textarea
            aria-invalid="false"
            aria-labelledby="garden-text-field-10--label"
            class="input inputMobile fieldMobile Textarea-sc-1alsvvb-0 text__c-txt__input--area___3VBq- dcOmlb Input-sc-4gf5js-0-textarea text__c-txt__input___2ZeOl kpjxwv"
            data-garden-id="textfields.textarea"
            data-garden-version="3.7.0"
            id="garden-text-field-10--input"
            name="answerBotInputValue"
            placeholder="Type your question here..."
            rows="1"
          >
            mobile message
          </textarea>
        </div>
      </div>
      <button
        aria-label="Send"
        class="button iconSendAnswerBotMobile IconButton-x15t1e-0 index__c-btn--icon___3Mbhs laoDmX Button__StyledButton-sc-12lsl5w-0 index__c-btn___1jmsn index__c-btn--basic___3PMxO index__c-btn--muted___3GOeG index__c-btn--pill___3Lsyd index__c-btn--lg___16u8A lcPfmb"
        data-garden-id="buttons.icon_button"
        data-garden-version="3.7.0"
        tabindex="0"
        type="button"
      >
        <span
          class="container Icon--sendChat"
          data-testid="Icon--sendChat"
          type="Icon--sendChat"
        >
          <svg
            aria-hidden="true"
            realfilename="widget-icon_sendChat.svg"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;
